konst/tests/misc_tests/destructure_ui_tests/from_ref_array_err.stderr
error[E0308]: mismatched types
 --> tests/misc_tests/destructure_ui_tests/from_ref_array_err.rs:4:5
  |
4 |     konst::destructure!{[_bar, _baz, _qux @ ..] = foo}
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |     |
  |     expected `[_; _]`, found `&[u8; 4]`
  |     arguments to this function are incorrect
  |
  = note:  expected array `[_; _]`
          found reference `&[u8; 4]`
note: function defined here
 --> src/macros/destructuring.rs
  |
  | pub const fn array_into_phantom<T, const N: usize>(
  |              ^^^^^^^^^^^^^^^^^^
  = note: this error originates in the macro `$crate::__destructure_array` which comes from the expansion of the macro `konst::destructure` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
 --> tests/misc_tests/destructure_ui_tests/from_ref_array_err.rs:4:5
  |
4 |     konst::destructure!{[_bar, _baz, _qux @ ..] = foo}
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |     |
  |     expected `[_; _]`, found `&[u8; 2]`
  |     arguments to this function are incorrect
  |
  = note:  expected array `[_; _]`
          found reference `&[u8; 2]`
note: function defined here
 --> src/macros/destructuring.rs
  |
  | pub const fn array_into_phantom<T, const N: usize>(
  |              ^^^^^^^^^^^^^^^^^^
  = note: this error originates in the macro `$crate::__destructure_array` which comes from the expansion of the macro `konst::destructure` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
 --> tests/misc_tests/destructure_ui_tests/from_ref_array_err.rs:4:5
  |
4 |     konst::destructure!{[_bar, _baz, _qux @ ..] = foo}
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |     |
  |     expected `[_; _]`, found `&[u8; 4]`
  |     arguments to this function are incorrect
  |
  = note:  expected array `[_; _]`
          found reference `&[u8; 4]`
note: associated function defined here
 --> $RUST/core/src/mem/manually_drop.rs
  |
  |     pub const fn new(value: T) -> ManuallyDrop<T> {
  |                  ^^^
  = note: this error originates in the macro `$crate::__destructure_array` which comes from the expansion of the macro `konst::destructure` (in Nightly builds, run with -Z macro-backtrace for more info)
